@startuml

title __SEM's Class Diagram__\n

  namespace com.napier.sem {
    class com.napier.sem.App {
        - con : Connection
        + connect()
        + disconnect()
        + displayEmployee()
        + getAllSalaries()
        + getAllSalariesByJobRole()
        + getEmployee()
        {static} + main()
        + printSalaries()
        - getMostRecentDepartmentName()
        - getMostRecentJobTitle()
        - getMostRecentManager()
        - getMostRecentSalary()
    }
  }
  

  namespace com.napier.sem {
    class com.napier.sem.Department {
        + dept_name : String
        + dept_no : String
    }
  }
  

  namespace com.napier.sem {
    class com.napier.sem.Employee {
        + dept_name : String
        + emp_no : int
        + first_name : String
        + last_name : String
        + salary : int
        + title : String
    }
  }
  

  com.napier.sem.Department o-- com.napier.sem.Employee : manager
  com.napier.sem.Employee o-- com.napier.sem.Employee : manager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
